Minor DRY update to the feedback

--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -331,6 +331,12 @@
             font-size: 1rem;
         }
     }
+    &__feedback{
+        font-family: 'ProximaNova-Semibold';
+        text-align: center;
+        color: rgb(108, 108, 108);
+        font-size: 2rem;
+    }
 }
 
 @media (min-width: 768px){
@@ -606,6 +612,9 @@
             &-description{
                 font-size: 2.5vh;
             }
+        }
+        &__feedback{
+            font-size: 4vh;
         }
     }
 }
