--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: column;
         font-family: 'ProximaNova-Regular';
+        text-align: center;
         margin: .6rem;
         gap: 1rem 0;
     }
