--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -310,6 +310,10 @@
 .--negative-top{
     margin-top: -1.5rem;
 }
+.--message-box{
+    height: 10rem;
+    padding-top: 1rem;
+}
 @-webkit-keyframes pulse {
     0% {
         -webkit-box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
@@ -677,6 +681,10 @@
     }
     .--negative-top{
         margin-top: -3vh;
+    }
+    .--message-box{
+        height: 20vh;
+        padding-top: 2.5vh;
     }
     @-webkit-keyframes pulse {
         0% {
