--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -285,6 +285,13 @@
     animation: pulse 2s infinite;
     transition: all ease-in .1s;
 }
+.--pulse-one-time{
+    -webkit-animation: pulse 2s 1;
+    -moz-animation: pulse 2s 1;
+    -o-animation: pulse 2s 1;
+    animation: pulse 2s 1;
+    transition: all ease-in .1s;
+}
 .--fade-up{
     background: linear-gradient(0deg, rgba(0,0,0,0.65) 60%, rgba(255,255,255,0) 100%);
 }
