Introduced the modal renderer service

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'components/profile-posts';
 @import 'components/hamburguer-menu';
 @import 'components/table-listing';
+@import 'components/modal';
 
 //Pages Import
 @import 'views/page';
