--- a/src/assets/sass/components/_hamburguer-menu.scss
+++ b/src/assets/sass/components/_hamburguer-menu.scss
@@ -12,7 +12,7 @@
     }
     &__items{
         position: absolute;
-        z-index: 9999;
+        z-index: 9998;
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -28,6 +28,10 @@
             text-align: center;
 
             & a{
+                display: inline-block;
+                width: 100%;
+            }
+            & button{
                 display: inline-block;
                 width: 100%;
             }
@@ -50,7 +54,7 @@
     }
 }
 .--is-active{
-    & button:first-child svg{
+    & .hamburguer-menu__button svg{
         & path{
             -webkit-transition: transform ease-in-out .2s;
             -moz-transition: transform ease-in-out .2s;
