--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -2,19 +2,153 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.85);
+    gap: 1.5rem 0;
 
     &__headers{
         display: flex;
         flex-direction: row;
         width: 100%;
+        margin: .3rem 0 0 0;
+        gap: 0 .2rem;
+    }
+    &__input{
+        flex: 2;
+        background: #ffffff;
+        color: #666666;
+        box-shadow:  1rem 1rem 3rem #d9d9d9, 
+                    -1rem -1rem 3rem #ffffff;
+        font-family: 'ProximaNova-Semibold';
+        font-size: 1.2rem;
+        padding: 0 .4rem 0 .4rem;
+        height: 2.3rem;
+        border: .14rem solid transparent;
+
+        -webkit-transition: all ease-in-out .3s;
+        -moz-transition: all ease-in-out .3s;
+        -ms-transition: all ease-in-out .3s;
+        -o-transition: all ease-in-out .3s;
+        transition: all ease-in-out .3s;
+
+        &:focus{
+            border-color: #9ec2bd;
+            box-shadow:  .3rem .3rem 1rem #86a5a1, 
+                    -.3rem -.3rem 1rem #b6dfd9;
+        }
+    }
+    &__button{
+        width: 3rem;
+        background-color: transparent;
+        border: none;
+
+        & svg{
+            width: 70%;
+        }
+    }
+    &__results{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem 0;
+        padding: 0 3rem 0 3rem;
+
+        &-feedback{
+            color: #666666;
+            font-family: 'ProximaNova-Bold';
+            text-align: center;
+            font-size: 1.5rem;
+        }
+    }
+    &__divisor{
+        &-header{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-family: 'ProximaNova-Regular';
+            font-size: 1rem;
+            width: 100%;
+            background-color: transparent;
+            border: .1rem solid #73A8A0;
+            height: 3rem;
+
+            & span:last-child{
+                margin: 0 0 0 auto;
+            }
+        }
     }
 }
 @media (min-width: 801px){
+    .modal{
+        gap: 5vh 0;
+
+        &__headers{
+            margin: 1vh 0 0 0;
+            gap: 0 .3vh;
+        }
+        &__input{
+            box-shadow:  2vh 2vh 6vh #d9d9d9, 
+                -2vh -2vh 6vh #ffffff;
+            font-size: 3vh;
+            padding: 0 .8vh 0 .8vh;
+            height: 5vh;
+            border: .4vh solid transparent;
+
+            &:focus{
+                box-shadow:  .6vh .6vh 2.4vh #86a5a1, 
+                -.6vh -.6vh 2.4vh #b6dfd9;
+            }
+        }
+        &__headers{
+            & button:nth-of-type(2){
+                -webkit-transition: transform ease-in-out .2s;
+                -moz-transition: transform ease-in-out .2s;
+                -ms-transition: transform ease-in-out .2s;
+                -o-transition: transform ease-in-out .2s;
+                transition: transform ease-in-out .2s;
+
+                &:hover{
+                    transform: rotate(45deg);
+                }
+            }
+        }
+        &__button{
+            width: 6vh;
+
+            & svg{
+                width: 90%;
+            }
+            &:hover{
+                cursor: pointer;
+            }
+            &:hover path{
+                fill: #73A8A0;
+            }
+        }
+        &__results{
+            gap: 2vh 0;
+            padding: 0 5vh 0 5vh;
+
+            &-feedback{
+                font-size: 4.5vh;
+            }
+        }
+        &__divisor{
+            &-header{
+                height: 7vh;
+                border: .1vh solid #73A8A0;
+                
+                &:hover{
+                    cursor: pointer;
+                }
+                &:hover span:nth-of-type(1){
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 }
