--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -8,27 +8,46 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(255,255,255,0.85);
+    background-color: rgba(255,255,255,0.95);
     gap: 1.5rem 0;
 
     &__headers{
         display: flex;
         flex-direction: row;
+        background-color: #ffffff;
         width: 100%;
-        margin: .3rem 0 0 0;
-        gap: 0 .2rem;
+        padding: .3rem 0 0 0;
+    }
+    &__input-area{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        background-color: #ffffff;
+        border-bottom: .3rem solid #000000;
+
+        & button:nth-of-type(1){
+            & svg{
+                -webkit-transition: transform ease-in-out .2s;
+                -moz-transition: transform ease-in-out .2s;
+                -ms-transition: transform ease-in-out .2s;
+                -o-transition: transform ease-in-out .2s;
+                transition: transform ease-in-out .2s;
+            }
+            &:focus svg{
+                transform: rotate(45deg);
+            }
+        }
     }
     &__input{
         flex: 2;
-        background: #ffffff;
+        border: none;
+        outline: none;
+        background-color: transparent;
         color: #666666;
-        box-shadow:  1rem 1rem 3rem #d9d9d9, 
-                    -1rem -1rem 3rem #ffffff;
         font-family: 'ProximaNova-Semibold';
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         padding: 0 .4rem 0 .4rem;
-        height: 2.3rem;
-        border: .14rem solid transparent;
+        height: 3.6rem;
 
         -webkit-transition: all ease-in-out .3s;
         -moz-transition: all ease-in-out .3s;
@@ -37,18 +56,16 @@
         transition: all ease-in-out .3s;
 
         &:focus{
-            border-color: #9ec2bd;
-            box-shadow:  .3rem .3rem 1rem #86a5a1, 
-                    -.3rem -.3rem 1rem #b6dfd9;
+            border: none;
         }
     }
     &__button{
-        width: 3rem;
+        width: 2.2rem;
         background-color: transparent;
         border: none;
 
         & svg{
-            width: 70%;
+            width: 100%;
         }
     }
     &__results{
@@ -72,9 +89,9 @@
             font-family: 'ProximaNova-Regular';
             font-size: 1rem;
             width: 100%;
-            background-color: transparent;
+            background: #ffffff;
             border: .1rem solid #73A8A0;
-            height: 3rem;
+            height: 4rem;
 
             & span:last-child{
                 margin: 0 0 0 auto;
@@ -87,40 +104,21 @@
         gap: 5vh 0;
 
         &__headers{
-            margin: 1vh 0 0 0;
-            gap: 0 .3vh;
+            padding: 1vh 0 0 0;
+        }
+        &__input-area{
+            border-bottom: .5vh solid #000000;
         }
         &__input{
-            box-shadow:  2vh 2vh 6vh #d9d9d9, 
-                -2vh -2vh 6vh #ffffff;
-            font-size: 3vh;
+            font-size: 2.5vh;
             padding: 0 .8vh 0 .8vh;
             height: 5vh;
-            border: .4vh solid transparent;
-
-            &:focus{
-                box-shadow:  .6vh .6vh 2.4vh #86a5a1, 
-                -.6vh -.6vh 2.4vh #b6dfd9;
-            }
-        }
-        &__headers{
-            & button:nth-of-type(2){
-                -webkit-transition: transform ease-in-out .2s;
-                -moz-transition: transform ease-in-out .2s;
-                -ms-transition: transform ease-in-out .2s;
-                -o-transition: transform ease-in-out .2s;
-                transition: transform ease-in-out .2s;
-
-                &:hover{
-                    transform: rotate(45deg);
-                }
-            }
         }
         &__button{
             width: 6vh;
 
             & svg{
-                width: 90%;
+                width: 2.5vh;
             }
             &:hover{
                 cursor: pointer;
@@ -150,5 +148,26 @@
                 }
             }
         }
+    }
+}
+.--result-is-loading{
+    -webkit-transition: border-color ease-in-out .2s;
+    -moz-transition: border-color ease-in-out .2s;
+    -ms-transition: border-color ease-in-out .2s;
+    -o-transition: border-color ease-in-out .2s;
+    transition: border-color ease-in-out .2s;
+
+    animation: loading 2s ease-in-out infinite;
+}
+
+@keyframes loading{
+    0% {
+        border-color: #000000;
+    }
+    50% {
+        border-color: #C4C4C4;
+    }
+    100% {
+        border-color: #000000;
     }
 }
