--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -97,6 +97,57 @@
                 margin: 0 0 0 auto;
             }
         }
+        &-content{
+            display: flex;
+            flex-direction: column;
+        }
+        &-headline{
+            text-decoration: none;
+            margin: 1rem 0;
+            background-color: #ffffff;
+        }
+        &-result-content{
+            display: flex;
+            flex-direction: row;
+            height: 100%;
+        }
+        &-info{
+            display: flex;
+            flex-direction: column;
+            gap: 1rem 0;
+            font-family: 'ProximaNova-Regular';
+            color: #000000;
+            font-size: 1rem;
+
+            & .modal__divisor-title{
+                margin: auto 0 auto 0;
+            }
+            & .modal__divisor-sec-title{
+                font-family: 'ProximaNova-Bold';
+                color: #666666;
+                margin: auto 0 auto 0;
+                font-size: .7rem;
+            }
+        }
+        &-media{
+            margin: 0 0 0 auto;
+
+            & span{
+                display: inline-block;
+                font-family: 'ProximaNova-Bold';
+                text-align: center;
+                background-color: #c4c4c4;
+                color: white;
+                padding: 1.3rem 0 0 0;
+                width: 5rem;
+                height: 2.8rem;
+                font-size: 1.6rem;
+            }
+            & img{
+                width: 5rem;
+                height: 100%;
+            }
+        }
     }
 }
 @media (min-width: 801px){
@@ -145,6 +196,54 @@
                 }
                 &:hover span:nth-of-type(1){
                     text-decoration: underline;
+                }
+            }
+            &-headline{
+                margin: 2vh 1.2vh;
+
+                &:hover .modal__divisor-title{
+                    border-color: #73A8A0;
+                }
+                &:hover .modal__divisor-media img{
+                    transform: scale(1.04);
+                }
+            }
+            &-info{
+                gap: 0;
+                font-size: 2vh;
+                padding: 0;
+
+                & .modal__divisor-title{
+                    -webkit-transition: border-color ease-in-out .2s;
+                    -moz-transition: border-color ease-in-out .2s;
+                    -ms-transition: border-color ease-in-out .2s;
+                    -o-transition: border-color ease-in-out .2s;
+                    transition: border-color ease-in-out .2s;
+                    margin: auto 0 auto 1vh;
+                    border-bottom: .4vh solid transparent;
+                }
+                & .modal__divisor-sec-title{
+                    margin: auto 0 auto 1vh;
+                    font-size: 1.4vh;
+                }
+            }
+            &-media{
+                overflow: hidden;
+
+                & span{
+                    font-size: 2vh;
+                    padding: 2vh 0 0 0;
+                    width: 8vh;
+                    height: 4.2vh;
+                }
+                & img{
+                    -webkit-transition: transform ease-in-out .2s;
+                    -moz-transition: transform ease-in-out .2s;
+                    -ms-transition: transform ease-in-out .2s;
+                    -o-transition: transform ease-in-out .2s;
+                    transition: transform ease-in-out .2s;
+                    width: 17vh;
+                    min-height: 12vh;
                 }
             }
         }
