Kept hidden overflow active at the hamburguer icon due to the animation

--- a/src/assets/sass/components/_hamburguer-menu.scss
+++ b/src/assets/sass/components/_hamburguer-menu.scss
@@ -55,6 +55,8 @@
 }
 .--is-active{
     & .hamburguer-menu__button svg{
+        overflow: hidden;
+        
         & path{
             -webkit-transition: transform ease-in-out .2s;
             -moz-transition: transform ease-in-out .2s;
