--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -33,9 +33,9 @@
                 -o-transition: transform ease-in-out .2s;
                 transition: transform ease-in-out .2s;
             }
-            &:focus svg{
-                transform: rotate(45deg);
-            }
+        }
+        &:focus-within button:nth-of-type(1) svg{
+            transform: rotate(45deg);
         }
     }
     &__input{
